--- a/config/pipeline-maven.yaml
+++ b/config/pipeline-maven.yaml
@@ -15,9 +15,9 @@ spec:
           workspace: shared-workspace
       params:
         - name: url
-          value: https://github.com/redhat-developer-demos/tekton-tutorial
+          value: https://github.com/cellist01/pipeline-maven.git
         - name: subdirectory
-          value: ""
+          value: mavenbuild-test
         - name: deleteExisting
           value: "true"
     - name: maven-run
