--- a/config/pipeline-maven.yaml
+++ b/config/pipeline-maven.yaml
@@ -31,7 +31,7 @@ spec:
         - name: MAVEN_MIRROR_URL
           value: https://nexus.apps.ocp4.internal.local/repository/maven-public/
         - name: CONTEXT_DIR
-          value: "websocket-hello"
+          value: "springboot"
         - name: GOALS
           value:
             - -DskipTests
