--- a/Hello-spring/pom.xml
+++ b/Hello-spring/pom.xml
@@ -28,11 +28,18 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+       		<groupId>org.springframework</groupId>
+        	<artifactId>spring-webmvc</artifactId>
+        	<version>4.1.6.RELEASE</version>
+    	</dependency>
 	</dependencies>
 
 	<build>
